[package]
name = "gsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gsd"
path = "src/lib.rs"

[dependencies]
gsd-sys = { git = "https://github.com/ianrgraham/gsd-sys.git" }
ndarray = "0.15"
num-traits = "0.2"
anyhow = "1.0"
log = "0.4"
static_assertions = "1.1"