[package]
name = "gsd"
version = "0.0.1"
edition = "2021"
description = "High-level bindings to GSD's C API"
license = "MIT"
keywords = ["gsd", "hoomd", "md", "io", "ffi"]

[lib]
name = "gsd"
path = "src/lib.rs"

[dependencies]
gsd-sys = { git = "https://github.com/ianrgraham/gsd-sys.git" }
ndarray = "0.15"
num-traits = "0.2"
anyhow = "1.0"
log = "0.4"
static_assertions = "1.1"